staticweb-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mystaticweb
  labels: 
    app: mystaticweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mystaticweb
  template:
    metadata:
      labels:
         app: mystaticweb
    spec:
     containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
