staticweb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mystaticweb
spec:
  ports:
  - protocol: TCP
    port: 80
  selector:
    app: mystaticweb
