ingress-deploy.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  tls:
  - hosts:
    - my-example.com
    secretName: mycertificate
  rules:
  - host: my-example.com
    http:
      paths:
      - backend:
        serviceName: mystaticweb
        servicePort: 80
